price beat alignment fixed

--- a/app/design/frontend/Dyode/curacao/Magento_Theme/web/css/source/_home.less
+++ b/app/design/frontend/Dyode/curacao/Magento_Theme/web/css/source/_home.less
@@ -197,7 +197,7 @@
 							display: flex;
 							margin:0 0 30px 0;
 							@media all and (max-width:767px){
-								margin:0 0 20px 0;
+								margin:0 0 20px 0; 
 							}
 
 							.left-block,
@@ -213,7 +213,7 @@
 								}
 
 								.image {
-									width: 45%;
+									width: 50%;
 									text-align: right;
 									margin-right: 15px;
 									@media all and (max-width:480px){
@@ -252,7 +252,7 @@
 								}
 
 								.details {
-									width: 55%;
+									width: 50%;
 									@media screen and (max-width: 890px) {
 										width: 70%;
 									}
